fix: Overflow file tiles should scroll itself

--- a/web/src/pages/Dashboard/MyFiles/styles.scss
+++ b/web/src/pages/Dashboard/MyFiles/styles.scss
@@ -1,13 +1,20 @@
+$headerHeight: 60px;
+
 .file-browser-container {
   flex-grow: 1;
 
   .file-browser-header {
-    padding: 1em 1.5em;
+    padding: 0 1.5em;
+    height: $headerHeight;
+    display: flex;
+    align-items: center;
     background-color: #f5f5f5;
   }
 
   .file-browser-content {
     padding: 0 1.5em;
+    height: calc(100vh - $headerHeight);
+    overflow: scroll;
 
     .file-tile-container {
       transition: background-color 300ms;
